<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Czytnik haseł SMS</string>
    <string name="Preferences">Ustawienia</string>
    <string name="smsPassword">Hasło SMSowe</string>
    <string name="YouWilBeAskedIfCopySMSCodeToClipboard">Po nadejsciu SMSa zostaniesz zapytany czy skopiować hasło do
        schowka
    </string>
    <string name="CodeWillBoCopiedAutomatically">Po nadejsciu SMSa hasło zostanie automatycznie zapisane w schowku
    </string>
    <string name="AutoCopy">Automatyczne kopiowanie</string>
    <string name="SupportedSenders">Obsługiwani nadawcy</string>
    <string name="ChooseSendersToSupport">Wyłącz obsługę SMSów od wybranych nadawców</string>
    <string name="app_description">Aplikacja ta ma pomagać w dokonywaniu transakcji bankowych wymagających tzw. &quot;haseł
        smsowych&quot;. Uzywając
        <b>Czytnika haseł SMS</b>
        nie musisz już przechodzić do skrzynki SMS kiedy wykonujesz przelew w aplikacji banku lub przez przeglądarkę.
        Jeśli aplikacja nie obsługuje SMSów z Twojego banku, skontaktuj się ze mną:
        smskody@aetas.pl.
    </string>
    <string name="app_credits">
        Podziękowania:\nAnia, Piotrek, Michał, Luki, Waldek, Ireneusz, Łukasz, Rafał, Łukasz, Marcin, Damian, Jony, Jakub, Paweł, Max, Teter1, Escort, Cr42y, Grzegorz S., Korsarz, Szewco, Maciej W., Rafał, Krzysztof Ż., Paweł M., Robert, Menia M., Mariusz, Grzegorz
    </string>
    <string name="rejectCode">Odrzuć</string>
    <string name="informationAboutApp">Informacje o aplikacji</string>
    <string name="aboutApp">O programie</string>
    <string name="other">Inne</string>
    <string name="onlyCodeInfoPresented">Zostanie wyswietlona tylko informacja o skopiowaniu kodu</string>
    <string name="smsContentPresented">Zostanie wyświetlona cała treść SMSa</string>
    <string name="presentFullSmsContent">Wyświetl pełną treść SMSa</string>
    <string name="smsCodeReceivedAndSavedInClipboard">Otrzymano hasło SMS %s i zapisano w schowku</string>
    <string name="doYouWantToCopyCodeToClipboard">Otrzymano hasło SMS ({0}) od {1}. Czy chcesz skopiować hasło do
        schowka?
    </string>
    <string name="about_activity_name">About SMSCodeReader</string>

</resources>
