<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="451dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp"
                tools:context=".AboutActivity"
                android:gravity="center"/>

        <TextView
                android:id="@+id/textView1"
                android:layout_width="301dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.27"
                android:gravity="center_vertical|fill_horizontal"
                android:text="@string/app_description"
                android:layout_height="0dp"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="0.31"
                android:paddingTop="30dp"
                android:text="@string/app_credits"/>

    </LinearLayout>
</ScrollView>